# zaplet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/zaplet-cli/: CMakeLists.txt
app/zaplet-cli/include/cli/: application.h
app/zaplet-cli/include/cli/commands/: command.h
app/zaplet-cli/include/cli/commands/http/: delete.h  get.h  head.h  options.h  patch.h  post.h  put.h
app/zaplet-cli/include/cli/commands/scenario/: play.h  run.h
app/zaplet-cli/src/: main.cpp
app/zaplet-cli/src/cli/: application.cpp
app/zaplet-cli/src/cli/commands/: command.cpp
app/zaplet-cli/src/cli/commands/http/: delete.cpp  get.cpp  head.cpp  options.cpp  patch.cpp  post.cpp  put.cpp
app/zaplet-cli/src/cli/commands/scenario/: play.cpp  run.cpp
cmake/: compiler.cmake  packaging.cmake  platform.cmake  target.cmake  utils.cmake
lib/: CMakeLists.txt
lib/zaplet/: CMakeLists.txt
lib/zaplet-lib/: CMakeLists.txt
lib/zaplet-lib/include/zaplet/: version.h
lib/zaplet-lib/include/zaplet/logging/: log_config.h  utils.h
lib/zaplet-lib/include/zaplet/output/format/: json_formatter.h
lib/zaplet-lib/include/zaplet/scenario/: player.h
lib/zaplet-lib/src/http/: http_wrapper.cpp
lib/zaplet-lib/src/logging/: logger.cpp
lib/zaplet-lib/src/output/: formatter_factory.cpp
lib/zaplet-lib/src/output/format/: table_formatter.cpp  yaml_formatter.cpp
lib/zaplet-lib/src/scenario/: yaml_parser.cpp
lib/zaplet/include/zaplet/: version.h  version.h.in  zaplet.h
lib/zaplet/include/zaplet/http/: client.h  http_wrapper.h  request.h  response.h  utils.h
lib/zaplet/include/zaplet/ini/: INIreader.h
lib/zaplet/include/zaplet/logging/: log_manager.h  logger.h
lib/zaplet/include/zaplet/output/: formatter.h  formatter_factory.h
lib/zaplet/include/zaplet/output/format/: json_formatter.h  table_formatter.h  yaml_formatter.h
lib/zaplet/include/zaplet/scenario/: scenario.h  scenario_runner.h  step.h  yaml_parser.h
lib/zaplet/include/zaplet/scenario/zsl/: zsl_lexer.h  zsl_parser.h  zsl_processor.h
lib/zaplet/src/: test.cpp
lib/zaplet/src/http/: client.cpp  request.cpp  response.cpp
lib/zaplet/src/ini/: INIreader.cpp
lib/zaplet/src/logging/: log_manager.cpp  logger.cpp
lib/zaplet/src/output/: formatter_factory.cpp
lib/zaplet/src/output/format/: json_formatter.cpp
lib/zaplet/src/scenario/: player.cpp  scenario.cpp  scenario_runner.cpp  step.cpp
lib/zaplet/src/scenario/zsl/: zsl_lexer.cpp  zsl_parser.cpp  zsl_processor.cpp
lib/zaplet/tests/: CMakeLists.txt
resources/config/: logger.conf
resources/example/: test_scenario.zpl
resources/md/: scenario_writing_en.md  scenario_writing_ru.md  zaplet_documentation_en.md  zaplet_documentation_ru.md
src/: Application.cpp  ProjectMeta.h.in
